buildscript {
    dependencies {
        classpath 'org.ow2.asm:asm:9.0'
        classpath 'org.ow2.asm:asm-commons:9.0'
        classpath 'org.ow2.asm:asm-tree:9.0'
        classpath 'org.ow2.asm:asm-util:9.0'
    }
}

plugins {
    id 'maven-publish'
    id 'dev.architectury.loom' version '0.7.2-SNAPSHOT' apply false
    id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
    id 'com.github.johnrengelman.shadow' version '5.2.0' apply false
}

allprojects {
    apply plugin: 'java'

    group = 'icyllis.modernui'
    archivesBaseName = 'ModernUI'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly "com.google.code.findbugs:jsr305:3.+"
    }

    java {
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = "UTF-8"

        def targetVersion = 11
        if (JavaVersion.current().isJava12Compatible()) {
            it.options.release.set(targetVersion)
        }
    }
}